# esp-idf-n-hal

./: Cargo.toml  README.md  build.rs  build_idf_config.rs  sdkconfig
.cargo/: config
main/: bindings.h
src/: bindings.h  console-idf.rs  console-rs.rs  console.rs  esp_idf.rs  esp_idf_v4_2_dev.rs  lib.rs  time.rs  watchdog_disabler.rs
src/freertos/: base.rs  box_queue.rs  critical.rs  delays.rs  isr.rs  mod.rs  mutex.rs  queue.rs  semaphore.rs  shim.c  shim.rs  task.rs  timers.rs  units.rs  utils.rs
src/freertos/patterns/: compute_task.rs  processor.rs  pub_sub.rs
src/freertos/prelude/: no_std.rs
