[package]
name = "esp-idf-n-hal"
version = "0.1.0"
authors = ["Yonas Jongkind"]
edition = "2018"

[features]
default = ["training-wheels","prefer-esp-idf"]
training-wheels = []
prefer-esp-idf = []
core_collections = [] # fro freertos

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
embedded-hal = {version="0.2.3",features = ["unproven"] }

esp-idf-alloc = "0.1.1"
alloc-no-stdlib = "2.0.1"

corepack = { version = "~0.4.0", default-features = false, features = ["alloc"] }

# xtensa-lx6-rt = { git = "https://github.com/esp-rs/xtensa-lx6-rt.git" }
esp32-hal = { path = "../deps/esp32-hal" }
esp32 = { path = "../deps/esp32" }

nb = "0.1.2"
spin = "0.5.2"

[build-dependencies]
clap = "^2"
ex = "^0"
bindgen = "^0"
simple_logger = "^1"
regex = "1"
esp-idf-n-hal-build-support = { path="../../tools/esp-idf-n-hal-build-support"}
